--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,6 +4,7 @@
 $proxima-nova-sb: 'proxima_nova_semibold';
 $proxima-nova-light: 'proxima_nova_light';
 $noto-serif: 'Noto Serif';
+$sgr-icons: 'sebastiangonzalez';
 
 // Constants
 $golden: 1.5; //Rounded down 1.61803398875
