--- a/sass/alternative.scss
+++ b/sass/alternative.scss
@@ -452,7 +452,7 @@ header {
 
     .header-logo-scroll {
         @include size(60px);
-        @include margin(10px null 10px 40px);
+        @include margin(10px null 10px 25px);
         // float: left;
 
         // transition: 600ms;
@@ -1340,3 +1340,137 @@ footer {
     content: "\e120";
 }
 
+
+
+
+
+
+
+
+/* MENU MOBILE */
+
+
+#bt-menu-mobile {
+    @include size(40px 30px);
+    outline: none;
+    cursor: pointer;
+    border: none;
+    background: none;
+
+    float: right;
+    margin: 25px 20px 0 0;
+    position: relative;
+    display: block;
+
+    @include mobile {
+        display: none;
+    }
+
+    span {
+        @include size(100% 2px);
+        position: absolute;
+        background-color: $near-white;
+        display: block;
+
+        -webkit-transition: all .2s ease-in-out;
+        -moz-transition: all .2s ease-in-out;
+        -o-transition: all .2s ease-in-out;
+        transition: all .2s ease-in-out;
+
+        &.top {
+            top: 0;
+        }
+        &.middle {
+            top: 50%;
+            margin-top: -2px;
+        }
+        &.bottom {
+            top: 100%;
+            margin-top: -2px;
+        }
+    }
+
+    &.close-bt-hamburguer .middle {
+        opacity: 0;
+    }
+    &.close-bt-hamburguer span.top {
+        margin: -2px 0 0 -3px;
+        top: 50%;
+        width: 80%;
+        margin-left: -11px;
+        -moz-transform: rotate(-45deg);
+        -webkit-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+    }
+    &.close-bt-hamburguer span.bottom {
+        margin: -2px 0 0 -3px;
+        top: 50%;
+        width: 80%;
+        margin-left: 11px;
+        -moz-transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+    }
+
+}
+
+#wrapper-menu-mobile {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 100%;
+    background-color: green;
+}
+
+.overlay-mobile {
+    position: fixed;
+    min-width: 100%;
+    height: 100%;
+    background-color: $dark-grey;
+    display: none;
+    z-index: 99;
+    padding: 10%;
+}
+
+.wrapper-container {
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
+#wrapper-mobile {
+    text-align: center;
+    display:table-cell;
+    vertical-align:middle;
+}
+
+ul#wrapper-mobile li {
+    font-size: 1.8em;
+    text-transform: uppercase;
+    // padding-bottom: 1em;
+    font-family: $proxima-nova-light;
+    letter-spacing: 0.05em;
+    padding: 20px 0;
+
+    &:last-child {
+        padding-bottom: 0;
+    }
+    a {
+        color: $near-white;
+        -webkit-transition: color 400ms;
+        transition: color 400ms;
+
+        &:hover {
+            color: $light-grey;
+        }
+    }
+
+    span {
+        font-size: 2em;
+        color: #23BEE8;
+    }
+
+}
